@@ -19,33 +19,36 @@ public class BlockingTaskQueue {
     }
 
     public void put(Task task) throws InterruptedException {
-        // TODO: ap2025.hw4.BlockingTaskQueue put method
-        synchronized (this) {
+        // _TO_DO: ap2025.hw4.BlockingTaskQueue put method
+        synchronized (globalTaskNotificationLock) {
             while (size() >= capacity) {
-                this.wait();
+                globalTaskNotificationLock.wait();
             }
             queue.add(task);
+            globalTaskNotificationLock.notifyAll();
         }
-
-
     }
 
     public Task take() throws InterruptedException {
         Task task = null;
-        // TODO: ap2025.hw4.BlockingTaskQueue take method (blocking)
+        // _TO_DO: ap2025.hw4.BlockingTaskQueue take method (blocking)
+        synchronized (globalTaskNotificationLock) {
+           while (isEmpty()) {
+            globalTaskNotificationLock.wait();
+           }
+           task = queue.remove(0);
+            globalTaskNotificationLock.notifyAll();
 
-
+        }
 
         return task;
     }
 
     public synchronized Task poll() {
-        // TODO: ap2025.hw4.BlockingTaskQueue poll method (non-blocking)
+        // _TO_DO: ap2025.hw4.BlockingTaskQueue poll method (non-blocking)
         //  should return a ap2025.hw4.Task instead of null
         if(!isEmpty()){
-            Task task = queue.removeFirst();
-            notifyAll();
-            return task;
+            return queue.remove(0);
         }
 
         return null;
